RESOLVED FIXED 255391
[GStreamer][WebRTC] Crash when calling rtpSender.getParameters()
https://bugs.webkit.org/show_bug.cgi?id=255391
Summary [GStreamer][WebRTC] Crash when calling rtpSender.getParameters()
Philippe Normand
Reported 2023-04-13 04:31:05 PDT
Casting a GValue* to a GstStructure* makes no sense.
Attachments
Philippe Normand
Comment 1 2023-04-13 04:33:24 PDT
EWS
Comment 2 2023-04-14 01:03:42 PDT
Committed 262948@main (5ee7cece66a1): <https://commits.webkit.org/262948@main> Reviewed commits have been landed. Closing PR #12695 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-14 01:04:19 PDT
Note You need to log in before you can comment on or make changes to this bug.