[GStreamer][WebRTC] Crash when calling rtpSender.getParameters() https://bugs.webkit.org/show_bug.cgi?id=255391

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::toRTCRtpSendParameters): Get the GstStructure from the GValue, instead of casting
non-sense leading to crashes when attempting to use the casted structure.

Canonical link: https://commits.webkit.org/262948@main